--- a/src/main/resources/data/forging_and_crafting/forge/biome_modifier/iron_upgrade_star_roe_biome_modifier.json
+++ b/src/main/resources/data/forging_and_crafting/forge/biome_modifier/iron_upgrade_star_roe_biome_modifier.json
@@ -1,6 +1,6 @@
 {
   "type": "forge:add_features",
-  "biomes": "forging_and_crafting:forging_world_swqx",
+  "biomes": "forging_and_crafting:forging_world_biome",
   "features": "forging_and_crafting:iron_upgrade_star_roe",
   "step": "underground_ores"
 }
